--- a/Momentum/style.css
+++ b/Momentum/style.css
@@ -1,3 +1,15 @@
-body{
-    background-color: beige;
+/* body {
+  background-color: beige;
 }
+h1 {
+  color: cornflowerblue;
+  transition: color 0.5s ease-in-out;
+}
+.clicked {
+  color: tomato;
+}
+.sexy-font {
+  font-family: "Protest Guerrilla", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+} */
